* '''Major rework of Core-Components'''  * It is now possible to use different configurations (such as debug/production etc.)  * Use of static inside a method wherever possible. This is one great function in PHP! We now have less private static vars  * Request Class clean up + additional Methods to get certain requested data and the current URL  * Request Class is now stating and singleton  * PATH_INFO parsing is now more generic  * Request now automatically recognizes the language-header and can automatically set the application's language  * Storing the current language in a cookie added  * setCookie, removeCookie for Handler  * Cleaned up the cookie stuff  * Check for app.link if it ends with /  * Removed StaticStorage as pre php5.3 is crap - Core now fully implements all methods on itself for now  * Added german + language switch to Sample-App  * Added use of Countable in QuerySelect  * Changed all occurences of sizeof in favor of count (seems to be cooler, I still lize siezof!)  * Fixed rightCheck for admin.php in Sample-App  * Minor bugfixes and major optimizations

--- a/Public/Sample/Css/style.css
+++ b/Public/Sample/Css/style.css
@@ -47,6 +47,8 @@ div#content {
 }
 
 div#logo a {
+	position: relative;
+	z-index: 10;
 	width: 377px;
 	height: 195px;
 	
@@ -124,6 +126,19 @@ div#footer div {
 
 div#footer div a:hover {
 	text-decoration: underline;
+}
+
+div#languages {
+	float: right;
+}
+
+div#languages a img {
+	margin: 1px 5px 1px 1px;
+}
+
+div#languages a.selected img {
+	margin: 0 4px 0 0;
+	border: 1px solid #aaa;
 }
 
 .clear {
