* Major Rework of Cache / Cache-API-Cleanup + simplification  * All Cache keys are now centrally stored  * Possibility to store tags to cache keys  * Fixed QueryCache when used with ->join  * Renamed Db to Database  * "start" in Paginator is now more generic, small additions  * Small additions to Route  * User edit/add/delete module for Sample Application Administration

--- a/Public/Sample/Css/style.css
+++ b/Public/Sample/Css/style.css
@@ -201,6 +201,18 @@ a.next {
 	float: right;
 }
 
+a.modifier {
+	text-decoration: none;
+}
+
+a.modifier:hover {
+	text-decoration: underline;
+}
+
+a.modifier img {
+	vertical-align: bottom;
+}
+
 div#content a {
 	color: #f7f7f7;
 }
