* '''Changed version from 0.2dev to 0.2beta'''  * Adding a New Image manipulation class and an Uploader (nice API! -> See IndexLayer::onSave for example usage  * Added a Style for UnitTests (they looked ugly!)  * A Favicon! :)  * Started to document everything with PHPDoc  * Minor changes/bugfixes

--- a/Public/Sample/Css/style.css
+++ b/Public/Sample/Css/style.css
@@ -254,3 +254,10 @@ span.green {
 	width: 16px;
 	height: 16px;
 }
+
+.articleimg {
+	float: left;
+	border: 1px solid #555;
+	padding: 3px;
+	margin-right: 5px;
+}
