* Adding an error in the template if mod_rewrite does not work for some reason

--- a/Public/ProjectTemplate/Css/style.css
+++ b/Public/ProjectTemplate/Css/style.css
@@ -7,6 +7,7 @@ body {
 
 body, div, ul {margin: 0; padding: 0; }
 .clear { clear: both; }
+.nodisplay { display: none; }
 
 a#logo {
 	position: relative;
