--- a/Public/Sample/Css/style.css
+++ b/Public/Sample/Css/style.css
@@ -40,6 +40,7 @@ div#content {
 	font-weight: bold;
 	font-size: 14px;
 	font-family: Calibri, Tahoma, sans-serif;
+	line-height: 19px;
 	
 	background: url('../Images/content.png') no-repeat;
 }
